--- a/Move.toml
+++ b/Move.toml
@@ -5,33 +5,19 @@ license = "MIT"
 authors = ["Bridget", "David"]
 
 [dependencies]
-
-# For remote import, use the `{ git = "...", subdir = "...", rev = "..." }`.
-# Revision can be a branch, a tag, and a commit hash.
+# For remote import, use `{ git = "...", subdir = "...", rev = "..." }`.
 # MyRemotePackage = { git = "https://some.remote/host.git", subdir = "remote/path", rev = "main" }
-
-# For local dependencies use `local = path`. Path is relative to the package root
-# Local = { local = "../path/to" }
-
-# To resolve a version conflict and force a specific version for dependency
-# override use `override = true`
-# Override = { local = "../conflicting/version", override = true }
+# For local deps: Local = { local = "../path/to" }
+# To force a version: Override = { local = "../conflicting/version", override = true }
 
 [addresses]
 hello_world = "0x0"
-
-# Named addresses will be accessible in Move as `@name`. They're also exported:
-# for example, `std = "0x1"` is exported by the Standard Library.
 # alice = "0xA11CE"
 
 [dev-dependencies]
-# The dev-dependencies section allows overriding dependencies for `--test` and
-# `--dev` modes. You can introduce test-only dependencies here.
 # Local = { local = "../path/to/dev-build" }
 
 [dev-addresses]
-# The dev-addresses section allows overwriting named addresses for the `--test`
-# and `--dev` modes.
 # alice = "0xB0B"
 
 
